--- a/OpenGL_StarterProject/OpenGL_StarterProject.vcxproj.filters
+++ b/OpenGL_StarterProject/OpenGL_StarterProject.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ObjectDrawData.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ShaderProgram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -81,6 +78,7 @@
     <None Include="shaders\instancedObject.vert" />
     <None Include="imgui.ini" />
     <None Include="assimp-vc143-mtd.dll" />
+    <None Include="shaders\swayingObject.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h">
@@ -90,12 +88,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectDrawData.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VertexAttributePointerData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Config.h">
